added demo/data_proc with data_calc_loop demo project added warning about UNIT_GROUPS kwta inhib_group without any unit groups! made new layout configuration flags conditional on qt > 4.3.0 fixed prog_lib/LeabraStartup to actually work, and LeabraBatch max_batch is not an arg, just a var.

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,6 +57,7 @@ DIST_SUBDIRS =\
 	demo/leabra \
 	demo/so \
 	demo/virt_env \
+	demo/data_proc \
 	src/temt/ta/images
 
 SUBDIRS =\
@@ -82,6 +83,7 @@ SUBDIRS =\
 	demo/leabra \
 	demo/so \
 	demo/virt_env \
+	demo/data_proc \
 	src/temt/ta/images
 
 EXTRA_DIST += src/temt/ta/ios-g++-3.1
