moved server files to temt

--- a/src/temt/ta/Makefile.am
+++ b/src/temt/ta/Makefile.am
@@ -203,6 +203,7 @@ HEADS =\
 	ta_defaults.h \
 	ta_plugin.h \
 	ta_plugin_p.h \
+	ta_server.h \
 	ta_project.h \
 	ta_gendoc.h \
 	$(HEADS_GUI) \
@@ -249,6 +250,8 @@ SRCS =\
 	ta_defaults.cpp \
 	ta_plugin_p.cpp \
 	ta_plugin_p.moc.cpp \
+	ta_server.cpp \
+	ta_server.moc.cpp \
 	ta_project.cpp \
 	ta_project.moc.cpp \
 	ta_gendoc.cpp \
