--- a/demo/data_proc/Makefile.am
+++ b/demo/data_proc/Makefile.am
@@ -1,4 +1,7 @@
 pkgdata_data_procdir = $(pkgdatadir)/demo/data_proc
 
 dist_pkgdata_data_proc_DATA =\
-	data_calc_loop.proj
+	data_calc_loop.proj \
+	epoch_log_analysis.proj \
+	epoch_log_analysis.sh \
+	epoch_log_analysis_sample_data.epc.dat
