added taCanvas object (inherits from taImage) which supports basic graphical drawing operations on the image.  Interface is similar to old "xcss" program and can be used for similar stimulus construction projects, now with all the power and convenience of Programs!

--- a/demo/data_proc/Makefile.am
+++ b/demo/data_proc/Makefile.am
@@ -4,4 +4,5 @@ dist_pkgdata_data_proc_DATA =\
 	data_calc_loop.proj \
 	epoch_log_analysis.proj \
 	epoch_log_analysis.sh \
-	epoch_log_analysis_sample_data.epc.dat
+	epoch_log_analysis_sample_data.epc.dat \
+	canvas_drawing.proj
