* NEW VERSION NUMBER: 4.0.7 * Activation based receptive field: ActBasedRF and ActBasedRField.prog * EnforceRows on DataTable

--- a/prog_lib/Makefile.am
+++ b/prog_lib/Makefile.am
@@ -1,6 +1,7 @@
 pkgdata_prog_libdir = $(pkgdatadir)/prog_lib
 
 dist_pkgdata_prog_lib_DATA =\
+	ActBasedRField.prog \
 	ApplyInputs.prog \
 	ApplyInputsImage.prog \
 	BpAll_Std.progp \
