fixed bug #120: make clean and make uninstall now nuke all version #'s -- no need to worry about doing make clean and uninstall prior to getting a new svn with an updated revision number!!  rejoice!!

--- a/Makefile.am
+++ b/Makefile.am
@@ -122,6 +122,10 @@ DISTCLEANFILES =\
 
 endif
 
+uninstall-local:
+	-rm -f $(DESTDIR)$(libdir)/libtemt*
+	-rm -f $(DESTDIR)$(libdir)/libemergent*
+
 # These actions occur immediately before a distribution tarball is created.
 dist-hook:
 	rm -fr $(distdir)/src/temt/ta/ios-g++-3.1/.svn
