--- a/src/emergent/lib/Makefile.am
+++ b/src/emergent/lib/Makefile.am
@@ -14,3 +14,7 @@ libemergent@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD =\
 	@abs_top_builddir@/src/emergent/leabra/libleabra@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la \
 	@abs_top_builddir@/src/emergent/so/libso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la \
 	@abs_top_builddir@/src/emergent/cs/libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la
+
+clean-local:
+	-rm -f libemergent*
+
