--- a/src/temt/css/Makefile.am
+++ b/src/temt/css/Makefile.am
@@ -74,4 +74,7 @@ libcss@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 libcss@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @EMERGENT_INCLUDES@
 libcss@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
+clean-local:
+	-rm -f libcss*
+
 cssdef.h:
