--- a/src/temt/taiqtso/Makefile.am
+++ b/src/temt/taiqtso/Makefile.am
@@ -96,3 +96,7 @@ noinst_LTLIBRARIES = libtaiqtso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la
 libtaiqtso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(SRCS) $(HEADS)
 libtaiqtso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @EMERGENT_INCLUDES@
 libtaiqtso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+
+clean-local:
+	-rm -f libtaiqtso*
+
