moved Moc.am clean-local code to each of the case-specific clean-local guys in Makefile.am's -- just noticed that there was a conflict error msg about that..

--- a/src/emergent/cs/Makefile.am
+++ b/src/emergent/cs/Makefile.am
@@ -48,5 +48,6 @@ libcs_EmergentToolkit@EMERGENT_SUFFIX@_la_CXXFLAGS = -O0
 
 clean-local:
 	-rm -f libcs*
+	if [ -n "`ls *\.moc\.cpp`" ];then rm `ls *\.moc\.cpp`;fi
 
 cs_def.h:
