--- a/src/emergent/so/Makefile.am
+++ b/src/emergent/so/Makefile.am
@@ -57,5 +57,6 @@ libso_EmergentToolkit@EMERGENT_SUFFIX@_la_CXXFLAGS = -O0
 
 clean-local:
 	-rm -f libso*
+	if [ -n "`ls *\.moc\.cpp`" ];then rm `ls *\.moc\.cpp`;fi
 
 so_def.h:
