--- a/src/temt/taiqtso/Makefile.am
+++ b/src/temt/taiqtso/Makefile.am
@@ -99,4 +99,5 @@ libtaiqtso@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
 clean-local:
 	-rm -f libtaiqtso*
+	if [ -n "`ls *\.moc\.cpp`" ];then rm `ls *\.moc\.cpp`;fi
 
