--- a/Moc.am
+++ b/Moc.am
@@ -3,5 +3,8 @@ SUFFIXES = .moc.cpp
 .h.moc.cpp:
 	$(QT_MOC) -o $@ $<
 
-clean-local:
-	if [ -n "`ls *\.moc\.cpp`" ];then rm `ls *\.moc\.cpp`;fi
+# this is now in each of the Makefile.am files because they also have
+# their own clean-local target!
+#clean-local:
+#	if [ -n "`ls *\.moc\.cpp`" ];then rm `ls *\.moc\.cpp`;fi
+#
