several recent bugfixes: * css Console window title * LoadData w/out header fixed * crashes w/ null net for various Wizard routines

--- a/css_lib/Makefile.am
+++ b/css_lib/Makefile.am
@@ -1,5 +1,6 @@
 pkgdata_css_stdlibdir = $(pkgdatadir)/css_lib
 
 dist_pkgdata_css_stdlib_DATA =\
+	bibtex_lib.css \
 	leabra_startup.css \
 	leabra_startup_pb.css
