glass brain fixes and colors for graph updates

--- a/3dobj_lib/Makefile.am
+++ b/3dobj_lib/Makefile.am
@@ -1,5 +1,5 @@
 pkgdata_prog_libdir = $(pkgdatadir)/3dobj_lib
 
 dist_pkgdata_prog_lib_DATA =\
-	glass_brain_L.iv \
-	glass_brain_R.iv
+	glass_brain_LH.iv \
+	glass_brain_RH.iv
