more 3dobj_lib items, including rat.iv!  viewer now supports IV output (good for debugging and for loading into external viewers!) and added set_color option for whether to apply color to an object or not in virtenv.

--- a/3dobj_lib/Makefile.am
+++ b/3dobj_lib/Makefile.am
@@ -2,4 +2,10 @@ pkgdata_prog_libdir = $(pkgdatadir)/3dobj_lib
 
 dist_pkgdata_prog_lib_DATA =\
 	glass_brain_LH.iv \
-	glass_brain_RH.iv
+	glass_brain_RH.iv \
+	rat.iv \
+	rat.jpg \
+	wood.png \
+	ground.png \
+	banana.iv
+
