* VERSION -> 4.0.10 (make uninstall; make clean!) * optimized GetMyLeafIndex on unit * BinarySave/Load on taMatrix * IV save format only saves from root data * added So3DHeightField for displaying 3d matrix data (from physics sim)

--- a/src/temt/css/Makefile.am
+++ b/src/temt/css/Makefile.am
@@ -53,7 +53,8 @@ HEADS =\
 	css_parse.h \
 	hard_of_css.h \
 	css_misc_funs.h \
-	$(HEADS_GUI)
+	$(HEADS_GUI) \
+	css_def.h
 
 include_HEADERS = $(HEADS) $(TAHEADS)
 
