--- a/bench/cuda/Makefile
+++ b/bench/cuda/Makefile
@@ -11,6 +11,8 @@ CUFILES		:= embench_cuda.cu
 # C/C++ source files (compiled with gcc / c++)
 CCFILES		:= \
 	main.cpp 
+# C/C++ header files
+HEADERS		+= embench_cuda.h
 
 BINDIR	= ./
 
@@ -18,3 +20,7 @@ BINDIR	= ./
 # Rules and targets
 
 include ${CUDA_SDK}/common/common.mk
+
+# additional dependencies
+
+$(OBJS) : $(HEADERS)
