--- a/Maketa.am
+++ b/Maketa.am
@@ -47,7 +47,7 @@ MAKETA_FLAGS =\
 	-I@abs_top_srcdir@/src/emergent/network \
 	-I@abs_top_srcdir@/src/emergent/leabra \
 	-I@abs_top_srcdir@/src/emergent/bp \
-	-I${QTDIR}/include/QtCore \
+	${CXXFLAGS} \
 	@MAKETA_CXXFLAGS@
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
