--- a/Makefile.am
+++ b/Makefile.am
@@ -138,12 +138,12 @@ dist-hook:
 linecount:
 	@ wc --lines `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` | grep total
 
-# Update our changelog from the subversion repository
-# This has prerequisites. See:
-# http://grey.colorado.edu/cgi-bin/trac.cgi/wiki/CreatingaGNUcompliantChangeLogfromSubversioncommits
-# TODO: Update above url
-changelog:
-	svn log --xml --verbose | xsltproc /home/mingus/opt/svn2cl-0.3/svn2cl.xsl - > ChangeLog
+
+changelog: changelog-web
+        /usr/local/svn2cl/svn2cl.sh -i -a
+
+changelog-web:
+        sudo /usr/local/svn2cl/svn2cl.sh --group-by-day --separate-daylogs --include-rev --include-actions --title="Emergent ChangeLog" --revision-link='http://grey.colorado.edu/cgi-bin/viewvc.cgi?view=rev&revision=' -o /usr/local/svn2cl/www/ChangeLog.html --authors=AUTHORS --html
 
 # todo: need to make some dependency on this so it gets activated..
 ${abs_top_builddir}/src/temt/ta/ta_TA_type.h: ${abs_top_builddir}/src/temt/maketa/maketa
