* fixed long names of lists in prog editor (objs, vars, etc): list returns GetName and also cache the "given name" to item used in default in iTreeItem GetColText to be used when other name is null -- all works well. * updated version to 4.0.15 -- this is now well tested and ready to go!

--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ dnl
 dnl Subst variables that start with PL_ are used in the plugin configuration
 
 # Set binary version here. The format allows for 99.99.99abc
-AC_INIT([Emergent],[4.0.14],[Emergent-discuss@psych-srv3.Colorado.EDU],[Emergent]) 
+AC_INIT([Emergent],[4.0.15],[emergent-users@grey.colorado.edu],[Emergent]) 
 # Change both of these
 LIB_VERSION=1:0:0   #Set library version here
 LIB_VERSION_2=1.0.0
@@ -45,7 +45,7 @@ SIM_AC_CONFIGURATION_SETTING([The Emergent Toolkit library version],[${LIB_VERSI
 
 AC_PREREQ([2.59])                                      dnl Autoconf 2.59 required
 AC_COPYRIGHT([
-Copyright, 1995-2007, Regents of the University of Colorado,
+Copyright, 1995-2008, Regents of the University of Colorado,
 Carnegie Mellon University, Princeton University.
 
 This file is part of Emergent
