* current iDialog -> iHostDialog * new iDialog -- replacement for QDialog with Ctrl+Enter shortcut for Apply/Accept --   Enter wasn't working on Linux so needed this at low level, and it is nice to   have consistent key shortcut for all apply cases.

--- a/src/temt/taiqtso/Makefile.am
+++ b/src/temt/taiqtso/Makefile.am
@@ -15,6 +15,7 @@ HEADS =\
 	ispinbox.h \
 	iwidgetlist.h \
 	itreewidget.h \
+	idialog.h \
 	ilineedit.h \
 	icheckbox.h \
 	icombobox.h \
@@ -50,6 +51,8 @@ SRCS =\
 	itreewidget.moc.cpp \
 	ilineedit.cpp \
 	ilineedit.moc.cpp \
+	idialog.cpp \
+	idialog.moc.cpp \
 	icheckbox.cpp \
 	icheckbox.moc.cpp \
 	icombobox.cpp \
