--- a/demo/data_proc/Makefile.am
+++ b/demo/data_proc/Makefile.am
@@ -1,9 +1,11 @@
 pkgdata_data_procdir = $(pkgdatadir)/demo/data_proc
 
 dist_pkgdata_data_proc_DATA =\
+	ca_eq_sim.proj \
+	canvas_drawing.proj \
 	data_calc_loop.proj \
+	data_tutorial.proj \
+	data_tutorial_final.proj \
 	epoch_log_analysis.proj \
 	epoch_log_analysis.sh \
-	epoch_log_analysis_sample_data.epc.dat \
-	canvas_drawing.proj \
-	ca_eq_sim.proj
+	epoch_log_analysis_sample_data.epc.dat
