--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -14,8 +14,7 @@ EMERGENT_DIR = $$(EMERGENTDIR)
 win32 {
   CONFIG += dll
   QMAKE_CXXFLAGS += /arch:SSE2
-#TODO: need to pass in the msvc target, ex Debug or Release (for pathing)
-MSVC_TARGET = Debug
+MSVC_TARGET = $$(MSVC_TARGET)
 
   contains( MSVC_TARGET, Debug ) {
     CONFIG += debug
