fixes related to plugin build and install on Linux

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,4 +1,7 @@
 pkgdata_pluginsdir = $(pkgdatadir)/plugins
 
 dist_pkgdata_plugins_DATA =\
-	Makefile.plugin
+	Makefile.plugin \
+	config.pri \
+	shared_pre.pri \
+	shared.pri
