--- a/src/emergent/so/Makefile.am
+++ b/src/emergent/so/Makefile.am
@@ -28,7 +28,7 @@ SRCS=\
 	zsh.cpp \
 	so_v3_compat.cpp
 
-include_HEADERS = $(HEADS) $(TAHEADS) so_TA_type.h so_TA_inst.h
+include_HEADERS = $(HEADS) $(TAHEADS) so_TA_type.h so_TA_inst.h so_def.h
 
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
