--- a/src/emergent/bp/Makefile.am
+++ b/src/emergent/bp/Makefile.am
@@ -22,7 +22,7 @@ SRCS=\
 	rbp.cpp  \
 	bp_v3_compat.cpp
 
-include_HEADERS = $(HEADS) $(TAHEADS) bp_TA_type.h bp_TA_inst.h
+include_HEADERS = $(HEADS) $(TAHEADS) bp_TA_type.h bp_TA_inst.h bp_def.h
 
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
