ok cmake and maketa all fixed and working gr8 now -- rest should be easy

--- a/src/temt/ta/CMakeLists.txt
+++ b/src/temt/ta/CMakeLists.txt
@@ -7,9 +7,14 @@ set(tapath ${PROJECT_SOURCE_DIR}/src/temt/ta)
 
 CREATE_MAKETA_COMMAND(ta ${tapath} "${ta_HEADS_MAKETA}")
 
-# todo: must be a way to fix this!
-# unfortunately seems to require the actual file here, not a smaller one..
-add_library(ta_dummy STATIC ${tapath}/ta_TA.cpp)
+# setup dependency between dummy.cpp file included in dummy library and TA file we 
+# actually want to generate now
+SET_SOURCE_FILES_PROPERTIES(dummy.cpp
+  PROPERTIES OBJECT_DEPENDS ${tapath}/ta_TA.cpp
+)
+
+# need a target to get anything to happen in this directory, so this is it
+add_library(ta_dummy STATIC dummy.cpp)
 
 ########### install files ###############
 
